--- a/pages/error/404.html
+++ b/pages/error/404.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Error</title>
-    <link rel="stylesheet" href="/error.css">
+    <title>404</title>
+    <link rel="stylesheet" href="/error/error.css">
 </head>
 
 <body>
     <div class="error-container">
-        <h1>Server-side Error</h1>
-        <p>The server experienced an error while handling your request. Try again later.</p>
+        <h1>404</h1>
+        <p>File not found</p>
     </div>
 </body>
 
