hrefs back to login and signup page

--- a/pages/error/badpass.html
+++ b/pages/error/badpass.html
@@ -14,6 +14,7 @@
         <p>Passwords must be at least 8 characters and contain at least one number (<kbd>0</kbd>-<kbd>9</kbd>), one
             lowercase letter (<kbd>a</kbd>-<kbd>z</kbd>), one uppercase letter (<kbd>A</kbd>-<kbd>Z</kbd>), and one
             symbol.</p>
+        <p><a href="/signup.html">Return to signup page</a></p>
     </div>
 </body>
 
