--- a/pages/error/failed-login.html
+++ b/pages/error/failed-login.html
@@ -12,6 +12,7 @@
     <div class="error-container">
         <h1>Failed to Login</h1>
         <p>Password or username was wrong.</p>
+        <p><a href="/login.html">Return to login page</a></p>
     </div>
 </body>
 
