--- a/pages/error/inuse.html
+++ b/pages/error/inuse.html
@@ -12,6 +12,7 @@
     <div class="error-container">
         <h1>Username In Use</h1>
         <p>Try a different one.</p>
+        <p><a href="/signup.html">Return to signup page</a></p>
     </div>
 </body>
 
