--- a/pages/error/baduser.html
+++ b/pages/error/baduser.html
@@ -14,6 +14,7 @@
         <p>Usernames can only contain the characters <kbd>A</kbd>-<kbd>Z</kbd>, <kbd>a</kbd>-<kbd>z</kbd>,
             <kbd>0</kbd>-<kbd>9</kbd> and <kbd>_</kbd> and must be between 3 and 32 characters.
         </p>
+        <p><a href="/signup.html">Return to signup page</a></p>
     </div>
 </body>
 
