unified stylesheet, added basic home page

--- a/pages/error/badpass.html
+++ b/pages/error/badpass.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Password</title>
-    <link rel="stylesheet" href="error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>Bad Password</h1>
         <p>Passwords must be at least 8 characters and contain at least one number (<kbd>0</kbd>-<kbd>9</kbd>), one
             lowercase letter (<kbd>a</kbd>-<kbd>z</kbd>), one uppercase letter (<kbd>A</kbd>-<kbd>Z</kbd>), and one
