--- a/pages/error/inuse.html
+++ b/pages/error/inuse.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Username In Use</title>
-    <link rel="stylesheet" href="error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>Username In Use</h1>
         <p>Try a different one.</p>
         <p><a href="/signup.html">Return to signup page</a></p>
