--- a/pages/error/server-error.html
+++ b/pages/error/server-error.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Error</title>
-    <link rel="stylesheet" href="/error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>Server-side Error</h1>
         <p>The server experienced an error while handling your request. Try again later.</p>
     </div>
