--- a/pages/error/400.html
+++ b/pages/error/400.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>400</title>
-    <link rel="stylesheet" href="error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>400</h1>
         <p>Malformed request.</p>
     </div>
