--- a/pages/error/503.html
+++ b/pages/error/503.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>503</title>
-    <link rel="stylesheet" href="/error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>503</h1>
         <p>Unable to handle request at this time. Try again later.</p>
     </div>
