--- a/pages/error/baduser.html
+++ b/pages/error/baduser.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad User</title>
-    <link rel="stylesheet" href="error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>Bad User</h1>
         <p>Usernames can only contain the characters <kbd>A</kbd>-<kbd>Z</kbd>, <kbd>a</kbd>-<kbd>z</kbd>,
             <kbd>0</kbd>-<kbd>9</kbd> and <kbd>_</kbd> and must be between 3 and 32 characters.
