--- a/pages/error/failed-login.html
+++ b/pages/error/failed-login.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="error/error.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="error-container">
+    <div class="container">
         <h1>Failed to Login</h1>
         <p>Password or username was wrong.</p>
         <p><a href="/login.html">Return to login page</a></p>
