--- a/pages/index.html
+++ b/pages/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reqest Timeout</title>
+    <title>Home</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Request Timeout</h1>
+        <h1>Home</h1>
+        <p>Welcome to our landing page!</p>
+        <div class="signup-in">
+            <a href="/login.html">Login</a>
+            <a href="/signup.html">Signup</a>
+        </div>
     </div>
 </body>
 
