--- a/pages/success/signedup.html
+++ b/pages/success/signedup.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>Signed up!</h1>
+        <p>Successfully signed up! Try logging in at <a href="/login.html">our login page</a>.</p>
+    </div>
 </body>
 
 </html>
